[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"

[toolchain]
channel = "nightly"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optiomizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3